[tool.poetry]
name = "hash-code"
version = "0.1.0"
description = ""
authors = ["tms-gvd <thomas.gaviard@gmail.com>", "tjsimpletg <tjsimpletg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = "^1.1.2"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
pytest = "^7.1.3"
coverage = "^6.5.0"
pylint = "^2.15.3"
Sphinx = "^5.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
